--- a/popup.html
+++ b/popup.html
@@ -154,7 +154,7 @@
     <div class="fyx-camera-preview" id="camera-preview-section">
       <h3>Camera Preview</h3>
       <div class="fyx-camera-video-wrap">
-        <video id="camera-preview" autoplay playsinline muted></video>
+        <canvas id="camera-canvas" width="160" height="120"></canvas>
         <div class="fyx-camera-overlay" id="camera-overlay">Camera off</div>
       </div>
     </div>
